# rabbit-wake

./: .checkout_session  .env.example  .gitignore  .mcp.json  CLAUDE.md  PROMPT_VENDAS_CAMYS.md  README.md  README_MCP_SERVER.md  SYNC_FLOW.md  alembic.ini  check_sync_status.py  customer_token.txt  env  get_token.py  get_token_simple.py  gql  pyproject.toml  requirements.txt  server-info.json  server.py  simple_login_start.py  simple_login_verify.py  sync_all_safe.py  sync_prices.py  sync_products_only.py  sync_stock.py  web_server.py
alembic/: env.py
alembic/versions/: 1459161ce827_fix_product_info_composite_primary_key.py  15531c0ecd6e_drop_product_info_table.py  45361e0813fd_add_updated_at_to_pricing_and_stock_.py  4ab70f905c07_add_variant_attributes_table.py  64f8153136e7_add_sync_state_table.py  966cfec4c78d_add_product_info_table.py  c1a5b2b059fc_add_customer_tokens_table.py  c53cbb8c52f2_add_product_tables.py  ce38d9aea784_add_product_info_table.py  e7734e3b7ac1_create_distribution_centers_table.py
docs/: MCP_SERVER_CREATION_GUIDE.md  checkout_mcp_tools.md  fechamento.md  rate_limiting.md  simple_login_mcp_tools.md
docs/storefront/: storefront_schema.json  storefront_schema.md  storefront_schema_simplified.json
examples/: CLAUDE.md
examples/categories/: all_categories.json  all_categories.md
examples/products/: all_products.json  all_products.md  get_product.json  get_product.md  list_all_updates.json  list_all_updates.md  product_categories.json  product_categories.md  product_images.json  product_images.md  product_info.json  product_info.md  (+6 more)
(+28 files in other folders)
